--- a/src/components/WeatherContainer/WeatherContainer.css
+++ b/src/components/WeatherContainer/WeatherContainer.css
@@ -12,26 +12,27 @@
   .weather-box{
     background: #feffff;
     display: flex;
-    padding: 2% ;
+    padding: 3%;
     align-self: center;
-
+    max-height: 80%;
     flex-direction: column;
     align-items: center;   
-    margin: 5%;
+    margin:  auto 0 ;
+    
     border-radius: 1%;
     box-shadow: 1vh 1vh 3vh 0.5vh;
   }
   h1{
     text-decoration: underline;
-    margin: 0;
-    padding: 0;
-   }
+  }
    h2{
     margin: 0;
     padding:0;
+    text-shadow: 2px 2px #b7b4c5;
    }
   
   footer {
+    align-self: flex-end;
     background-color: #282c34;
     min-width: 100%;
     height: 5%;
