--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
 
 body{
   margin:0;
+  max-width: 100%;
   padding:0;
   background: linear-gradient(to right, #a0d8ef 100%,#feffff 80%,#a0d8ef 100%);
 }
+@media all and (min-width: 960px) {
+  body{
+      font-size: 18px;
+  }
+}
 
+@media all and (max-width: 959px) and (min-width: 600px) {
+  body{
+      font-size: 16px;
+  }
+}
+
+@media all and (max-width: 599px) and (min-width: 320px) {
+  body{
+      font-size: 12px;
+  }
+
+}
 
 
 
