--- a/src/components/WeatherInfo/WeatherInfo.css
+++ b/src/components/WeatherInfo/WeatherInfo.css
@@ -15,7 +15,7 @@
     margin-top: 0;
     padding: 2% 8%;
     width: 100%;
-    font-size: calc(10px + 4vmin);
+    font-size: 2em;
     font-weight: bolder;
     box-shadow: 0.5vh 0.5vh 2vh 0.5vh black;
     background:  #413c59;
@@ -37,6 +37,7 @@
     box-shadow: 0.5vh 0.5vh 2vh 0.5vh black; 
     margin: 5% 5%;
     text-shadow:1px 2px #69647e;
+    font-size: 1.5em;
 }
 
 .temperature-value,
